@@ -1,3 +1,11 @@
+Wed Feb  1 19:10:45 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>
+
+        * dds/DCPS/RTPS/Sedp.h:
+        * dds/DCPS/RTPS/Sedp.cpp:
+
+          Adding set to handle rtps sedp messages prior to receiving
+          spdp messages from a remote participant.
+
 Tue Jan 31 23:03:05 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
         * dds/DCPS/RTPS/ParameterListConverter.cpp:
